--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
-    "expo": "~48.0.15",
-    "expo-location": "~15.1.1",
+    "@expo/webpack-config": "^0.17.0",
+    "@mapbox/polyline": "^1.2.0",
+    "axios": "^1.4.0",
+    "expo": "^46.0.21",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "^0.71.8",
+    "react": "18.0.0",
+    "react-native": "0.69.9",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-maps": "1.3.2",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
